added tipsy - added sweetalert

--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <title>MongoDB</title>
 
+    <link rel="stylesheet" href="js_libs/tipsy/tipsy.css">
+    <link rel="stylesheet" href="js_libs/sweetalert/sweetalert.css">
+
+    <link rel="stylesheet" href="index.css">
+
     <!-- script for enabling other libs of js -->
     <script>
         window.nodeRequire = require;
@@ -18,10 +23,21 @@
     <input id="testInput" type="text">
     <button id="writeDocIntoDB">write into mongo</button>
 
-    <script type="text/javascript" src="js_libs/jquery-3.2.1.min.js"></script>
-    <script type="text/javascript" src="mongoDbTest.js"></script>
-    <script>
 
+
+
+
+
+
+
+
+    <script type="text/javascript" src="js_libs/jquery-3.2.1.min.js"></script>
+    <script type="text/javascript" src="js_libs/tipsy/jquery.tipsy.js"></script>
+    <script type="text/javascript" src="js_libs/sweetalert/sweetalert.min.js"></script>
+
+    <script type="text/javascript" src="index.js"></script>
+    <script>
+//        sweetAlert("hello");
     </script>
 </body>
 </html>
