--- a/index.html
+++ b/index.html
@@ -19,17 +19,15 @@
 
 </head>
 <body>
-    <h1>hello world</h1>
+    <h1>Simple MongoDB operations</h1>
     <input id="testInput" type="text">
+    <br>
     <button id="writeDocIntoDB">write into mongo</button>
-
-
-
-
-
-
-
-
+    <br>
+    <br>
+    <textarea cols="30" rows="10" id="testOutput"></textarea>
+    <br>
+    <button id="readFromDB">read collection "teachers"</button>
 
     <script type="text/javascript" src="js_libs/jquery-3.2.1.min.js"></script>
     <script type="text/javascript" src="js_libs/tipsy/jquery.tipsy.js"></script>
